_k8s/policy/inventory-db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: inventory-db-allow-only-app
spec:
  podSelector:
    matchLabels:
      app: inventory-db
  
  # Filtering Ingress (Incoming traffic)
  policyTypes:
    - Ingress
  
  #  Whitelist Rules
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: inventory-service
      ports:
        - protocol: TCP
          port: 5432
