_k8s/policy/kafka-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-allow-only-app
spec:
  podSelector:
    matchLabels:
      app: kafka

  # Filtering Ingress (Incoming traffic)
  policyTypes:
    - Ingress

    #  Whitelist Rules
  ingress:
    - from:
        - podSelector:
            matchLabels:
              kafka-client: "true"
        - podSelector:
            matchLabels:
              # Allow Kafka to talk to itself (Broker-to-Controller traffic)
              app: kafka
      ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
